[project]
name = "projeto-integrador-ii-b"
version = "0.1.0"
description = "Sistema de triagem de sintomas utilizando inteligência artificial para apoio inicial à identificação de condições clínicas, desenvolvido como parte do Projeto Integrador II-B da PUC Goiás."
readme = "README.md"
authors = [
    { name = "Alcebiades Filho", email = "alcebiadesabf@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "faker>=37.4.0",
    "graphviz>=0.21",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "pydotplus>=2.0.2",
    "scikit-learn>=1.7.0",
    "streamlit>=1.46.0",
]
